--- a/sltv.css
+++ b/sltv.css
@@ -2,15 +2,23 @@
 /*styles presented in alphabetical order*/
 /*--------------------------------------*/
 /*DEFS ELEMENTS PROPERTIES*/
+use.arrowColor1 {
+  stroke:#a3a3a3;
+  stroke-width:.45px;
+}
+use.arrowColor2 {
+  stroke:rgb(180,180,180);
+  stroke-width:1.5px;
+}
 #arrowField {
   fill:#2e2e2e;
   stroke:none;
 }
 #navArrow,#slideArrow {
   fill:none;
-  stroke:#a3a3a3;
+  stroke:inherit;
   stroke-linecap:butt;
-  stroke-width:.55px;
+  stroke-width:inherit;
 }
 #seriesBaseTmplt {
   fill:inherit;
@@ -64,8 +72,6 @@ body {
   height:0vw;
 }
 #content {
-  transform:translateY(60vw);
-  transition:transform 800ms ease-in-out;
   position:relative;
   bottom:138vw;
   z-index:2;
@@ -82,28 +88,23 @@ body {
 .dailyArrow {
   cursor:pointer;
   fill:rgba(0,0,0,0);
-}#dailyTitle {
+}
+#dailyTitle {
   cursor:pointer;
   font-family:'Roboto Condensed', sans-serif;
   font-size:35px;
   font-weight:400;
   line-height:112%;
-  word-spacing:-1px;
-  letter-spacing:-.085vw;
+  word-spacing:-1.1px;
+  letter-spacing:-.095vw;
   color:rgb(255,255,255);
   transition:opacity 800ms ease-in-out 400ms;
-  background-color:rgba(31,31,31,.3);
   padding:.9vw .3vw 1vw 1.5vw;
 }
-#disciplinesListTraps,#leaguesListTraps,#langsListTraps,#repostTraps rect {
-  cursor:pointer;
-  fill:rgba(165,225,76,0);
-  stroke:none;
-}
 #divisionDescr {
-  width:25.5vw;
+  width:19vw;
   height:6vw;
-  font-size:1.5vw;
+  font-size:1.1vw;
   font-weight:400;
   font-family:'Roboto', sans-serif;
   fill:rgb(82,82,82);
@@ -143,20 +144,20 @@ footer .middleCont div:first-child {
 footer .middleCont div:nth-child(3) {
   width:24vw;
   font-family:'Roboto',sans-serif;
-  font-size:11.7px;
+  font-size:.7vw;
   font-weight:400;
-  line-height:1.4;
+  line-height:1.5;
   color:darkgrey;
   padding:.65vw 0vw 0vw 2.2vw;
 }
 footer .middleCont div:nth-child(4) {
   width:24vw;
   font-family:'Roboto',sans-serif;
-  font-size:12px;
+  font-size:.9vw;
   font-weight:400;
   line-height:1.4;
   color:darkgrey;
-  margin:3.55vw 0vw 0vw 0vw;
+  margin:3.7vw 0vw 0vw 0vw;
 }
 footer p {
   display:inline;
@@ -168,9 +169,6 @@ footer p {
 }
 footer p:last-child {
   padding-left:2.6vw;
-}
-#frame0 {
-  transition:opacity 800ms ease-in-out;
 }
 header {
   transform:translateY(-4.6vw);
@@ -250,8 +248,9 @@ header {
 }
 #mainSliderUi {
   position: relative;
-  bottom:26vw;
-  width:52.6vw;
+  bottom:25.7vw;
+  left:.1vw;
+  width:52.5vw;
   height:24.7vw;
   font-family:'Roboto Condensed', sans-serif;
   text-anchor: middle;
@@ -284,7 +283,7 @@ mark {
 }
 #matchesDay {
   font-family: 'Roboto', sans-serif;
-  font-size:15px;
+  font-size:13px;
 }
 #matchesDate {
   font-family: 'Roboto', sans-serif;
@@ -306,7 +305,7 @@ mark {
 .middleCont ul {
   width:28vw;
   height:1.2vw;
-  margin:1.1vw 0vw 0vw -1vw;
+  margin:1.2vw 0vw 0vw -.3vw;
 }
 .middleCont ul li {
   cursor:pointer;
@@ -339,14 +338,21 @@ mark {
   font-weight:600;
   font-size:18px;
   text-anchor:start;
-  fill:rgb(41,41,41);
 }
 #newsTable text tspan:last-child {
   font-family:'Roboto', sans-serif;
   font-weight:400;
   font-size:13px;
   text-anchor:end;
+}
+.unactiveNewsRow tspan:first-child {
+  fill:rgb(41,41,41);
+}
+.unactiveNewsRow tspan:last-child {
   fill:rgb(80,80,80);
+}
+.activeNewsRow {
+  fill:rgb(217,0,0) !important;
 }
 #newsTraps rect {
   cursor:pointer;
@@ -366,10 +372,14 @@ mark {
   /*clip-path:url(#pixelPerfect); 
   -webkit-clip-path:url(#pixelPerfect); */
 }
-#preloader {
+#preloadCont {
   transition:opacity 800ms linear;
-  position:relative;  
-  transform:translateY(-105vw);
+  position:fixed;
+  z-index:10;
+  top:0vw;
+  background-color:white;
+  width:100vw;
+  height:100vh;
 }
 .redLabel {
   font-family:'Roboto Condensed', sans-serif;
@@ -386,21 +396,6 @@ mark {
 #regionTraps {
   fill:rgba(110,150,165,0);
 }
-#regionTeams {
-  font-family:'Roboto Condensed', sans-serif;
-  text-anchor:center;
-}
-#regionTeams tspan:first-child {
-  font-size:58px;
-  font-weight:600;
-  fill:rgb(31,31,31);
-}
-#regionTeams tspan:last-child {
-  font-size: 15px;
-  font-weight: 400;
-  fill:rgb(143,143,143);
-  letter-spacing:1.5px;
-}
 .row {
   font-family: 'Roboto Condensed', sans-serif;
 }
@@ -413,12 +408,12 @@ mark {
   font-size:18px; 
 }
 #secondaryCover {
+  opacity:0;
+  transition:opacity 800ms ease-in-out 1300ms;
   position: relative;
-  width:122vw;
+  width:121vw;
 }
 #secondaryCoverCont {
-  transform:translateY(-27vw);
-  transition:transform 800ms ease-in-out;
   position: relative;
   z-index: 1;
   width:100vw;
